--- a/backend/.env.example
+++ b/backend/.env.example
@@ -5,17 +5,18 @@ API_PREFIX=api
 API_VERSION=v1
 
 # Database
-DB_HOST=localhost
-DB_PORT=5432
-DB_USERNAME=postgres
-DB_PASSWORD=postgres
-DB_NAME=tradeclub
-DB_SYNC=true
-DB_LOGGING=true
+DATABASE_URL=postgresql://postgres:postgres@localhost:5432/tradeclub?schema=public
 
 # JWT
 JWT_SECRET=your-super-secret-jwt-key-change-in-production
 JWT_ACCESS_EXPIRATION=1d
+
+# Wallet Encryption (32+ characters)
+WALLET_ENCRYPTION_KEY=your-32-char-encryption-key-here-123
+
+# Solana
+SOLANA_RPC_URL=https://api.devnet.solana.com
+SOLANA_NETWORK=devnet
 
 # Rate Limiting
 THROTTLE_TTL=60
@@ -26,4 +27,3 @@ CORS_ORIGIN=http://localhost:3001
 
 # Logging
 LOG_LEVEL=debug
-LOG_DIR=logs
