--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tradeclub-backend",
   "version": "1.0.0",
-  "description": "TradeClub Web3 Backend API",
+  "description": "TradeClub Backend API",
   "author": "",
   "private": true,
   "license": "MIT",
