--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,6 +1,6 @@
 {
-  "include": ["src/**/*", "api/**/*", "prisma/**/*"],
-  "exclude": ["node_modules", "dist"],
+  "include": ["src/**/*"],
+  "exclude": ["api", "node_modules", "dist"],
   "compilerOptions": {
     "ignoreDeprecations": "5.0",
     "module": "commonjs",
@@ -11,6 +11,7 @@
     "allowSyntheticDefaultImports": true,
     "target": "ES2021",
     "sourceMap": true,
+    "rootDir": "./src",
     "outDir": "./dist",
     "baseUrl": "./",
     "incremental": true,
