--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,12 +1,11 @@
 {
   "version": 2,
   "name": "tradeclub-backend",
-  "builds": [
-    {
-      "src": "api/index.ts",
-      "use": "@vercel/node"
+  "functions": {
+    "api/index.js": {
+      "runtime": "nodejs20.x"
     }
-  ],
+  },
   "routes": [
     {
       "src": "/(.*)",
