fix: vercel config

--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -3,7 +3,7 @@
   "name": "tradeclub-backend",
   "functions": {
     "api/index.js": {
-      "runtime": "nodejs20.x"
+      "runtime": "@vercel/node@3"
     }
   },
   "routes": [
