--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -3,14 +3,14 @@
   "name": "tradeclub-backend",
   "builds": [
     {
-      "src": "api/index.js",
+      "src": "api/index.ts",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "api/index.js"
+      "dest": "api/index.ts"
     }
   ],
   "env": {
