--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,7 +2,7 @@
 NODE_ENV=development
 PORT=3002
 API_PREFIX=api
-API_VERSION=v1
+API_VERSION=1
 
 # Database
 DATABASE_URL=postgresql://postgres:postgres@localhost:5432/tradeclub?schema=public
