feat: implement hyperliquid perp engine

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -14,9 +14,13 @@ JWT_ACCESS_EXPIRATION=1d
 # Wallet Encryption (32+ characters)
 WALLET_ENCRYPTION_KEY=your-32-char-encryption-key-here-123
 
-# Solana
-SOLANA_RPC_URL=https://api.devnet.solana.com
-SOLANA_NETWORK=devnet
+# DEPRECATED: Solana (keeping for reference during migration)
+# SOLANA_RPC_URL=https://api.devnet.solana.com
+# SOLANA_NETWORK=devnet
+
+# NEW: Hyperliquid Configuration
+HYPERLIQUID_NETWORK=testnet  # or 'mainnet' for production
+HYPERLIQUID_RPC_URL=https://api.hyperliquid-testnet.xyz  # or https://api.hyperliquid.xyz for mainnet
 
 # Rate Limiting
 THROTTLE_TTL=60
