--- a/backend/package.json
+++ b/backend/package.json
@@ -42,6 +42,7 @@
     "@nestjs/swagger": "^7.2.0",
     "@nestjs/terminus": "^10.2.0",
     "@nestjs/throttler": "^5.1.1",
+    "@nktkas/hyperliquid": "^0.31.0",
     "@prisma/client": "^5.22.0",
     "@solana/spl-token": "^0.4.14",
     "@solana/web3.js": "^1.98.4",
@@ -56,6 +57,7 @@
     "reflect-metadata": "^0.2.1",
     "rxjs": "^7.8.1",
     "tweetnacl": "^1.0.3",
+    "viem": "^2.45.1",
     "winston": "^3.11.0"
   },
   "devDependencies": {
