bigggg refactor: hyperliquid trading engine

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -14,27 +14,13 @@ JWT_ACCESS_EXPIRATION=1d
 # Wallet Encryption (32+ characters, used for encrypting agent private keys)
 WALLET_ENCRYPTION_KEY=your-32-char-encryption-key-here-123
 
-# ============================================
-# Hyperliquid Configuration (PRIMARY)
-# ============================================
+# Hyperliquid Configuration
 HYPERLIQUID_NETWORK=testnet  # or 'mainnet' for production
 HYPERLIQUID_RPC_URL=https://api.hyperliquid-testnet.xyz  # or https://api.hyperliquid.xyz for mainnet
 
-# ============================================
-# Test Wallets (for development scripts)
-# ============================================
-
-# EVM Test Wallet (for scripts/evm-sign.ts)
-TEST_EVM_PRIVATE_KEY=0x_your_private_key_here
-TEST_EVM_ADDRESS=0x_your_address_here
-
-# DEPRECATED: Solana Test Wallet (for scripts/solana-sign.ts - legacy only)
-# TEST_WALLET_SECRET_KEY=base58_secret_key_here
-# TEST_WALLET_ADDRESS=base58_public_key_here
-
-# ============================================
-# Infrastructure
-# ============================================
+# Test Wallet (for scripts/evm-sign.ts)
+TEST_EVM_PRIVATE_KEY=0x_your_test_private_key_here
+TEST_EVM_ADDRESS=0x_your_test_address_here
 
 # Rate Limiting
 THROTTLE_TTL=60
@@ -45,9 +31,3 @@ CORS_ORIGIN=http://localhost:3001
 
 # Logging
 LOG_LEVEL=debug
-
-# ============================================
-# DEPRECATED: Solana/Drift (removed from codebase)
-# ============================================
-# SOLANA_RPC_URL=https://api.devnet.solana.com
-# SOLANA_NETWORK=devnet
