--- a/backend/package.json
+++ b/backend/package.json
@@ -41,7 +41,6 @@
     "@nestjs/platform-express": "^10.3.0",
     "@nestjs/swagger": "^7.2.0",
     "@nestjs/terminus": "^10.2.0",
-    "@nestjs/throttler": "^5.1.1",
     "@nktkas/hyperliquid": "^0.31.0",
     "@prisma/client": "^5.22.0",
     "@solana/spl-token": "^0.4.14",
@@ -51,6 +50,7 @@
     "class-validator": "^0.14.1",
     "compression": "^1.7.4",
     "dotenv": "^17.2.3",
+    "ethers": "^6.16.0",
     "helmet": "^7.1.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
@@ -64,6 +64,7 @@
     "@nestjs/cli": "^10.3.0",
     "@nestjs/schematics": "^10.1.0",
     "@nestjs/testing": "^10.3.0",
+    "@nestjs/throttler": "^5.1.1",
     "@types/compression": "^1.7.5",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.11",
