--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,13 +15,17 @@
     "@solana/wallet-adapter-react-ui": "^0.9.39",
     "@solana/wallet-adapter-wallets": "^0.19.37",
     "@solana/web3.js": "^1.98.4",
+    "@tanstack/react-query": "^5.90.20",
+    "@wagmi/core": "^3.3.2",
     "bs58": "^6.0.0",
     "ethers": "^6.16.0",
     "lightweight-charts": "^5.1.0",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "viem": "^2.45.2",
+    "wagmi": "^3.4.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
