--- a/contracts/foundry.toml
+++ b/contracts/foundry.toml
@@ -6,3 +6,4 @@ test = "test"
 solc_version = "0.8.24"
 optimizer = true
 optimizer_runs = 200
+remappings = ["@openzeppelin/=node_modules/@openzeppelin/", "@prb/math/=node_modules/@prb/math/"]
