--- a/backend/package.json
+++ b/backend/package.json
@@ -35,12 +35,15 @@
     "@nestjs/common": "^10.3.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.3.0",
+    "@nestjs/event-emitter": "^3.0.1",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/mapped-types": "^2.0.4",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.3.0",
+    "@nestjs/platform-socket.io": "^11.1.13",
     "@nestjs/swagger": "^7.2.0",
     "@nestjs/terminus": "^10.2.0",
+    "@nestjs/websockets": "^11.1.13",
     "@nktkas/hyperliquid": "^0.31.0",
     "@prisma/client": "^5.22.0",
     "@solana/spl-token": "^0.4.14",
@@ -56,6 +59,7 @@
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.1",
     "rxjs": "^7.8.1",
+    "socket.io": "^4.8.3",
     "tweetnacl": "^1.0.3",
     "viem": "^2.45.1",
     "winston": "^3.11.0"
