feat(worker): add worker module to run async contract calls and become indexer soon
- Created WorkerModule to handle worker-related functionality.
- Implemented bootstrap script to initialize the worker and handle shutdown gracefully.
- Configured BullMQ with Redis connection settings from environment variables.
- Updated tsconfig to resolve JSON modules.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -18,6 +18,26 @@ WALLET_ENCRYPTION_KEY=your-32-char-encryption-key-here-123
 HYPERLIQUID_NETWORK=testnet  # or 'mainnet' for production
 HYPERLIQUID_RPC_URL=https://api.hyperliquid-testnet.xyz  # or https://api.hyperliquid.xyz for mainnet
 
+# Queue (BullMQ)/Cache (Redis) Configuration
+REDIS_URL=
+REDIS_HOST=127.0.0.1
+REDIS_PORT=6379
+REDIS_PASSWORD=
+REDIS_DB=0
+
+# Match Settlement Chain Configuration
+CHAIN_CURRENT=evm-local
+EVM_CHAIN_ID=31337
+EVM_RPC_URL=http://127.0.0.1:8545
+EVM_OPERATOR_KEY=0x_your_operator_private_key_here
+EVM_MARKET_FACTORY=0x_market_factory_address
+EVM_MATCH_SETTLEMENT=0x_match_settlement_address
+EVM_STABLECOIN=0x_stablecoin_address
+EVM_FEE_COLLECTOR=0x_fee_collector_address
+EVM_OUTCOMES_COUNT=2
+EVM_B_SCORE=1000000000000000000
+EVM_FEE_BPS=200
+
 # Test Wallet (for scripts/evm-sign.ts)
 TEST_EVM_PRIVATE_KEY=0x_your_test_private_key_here
 TEST_EVM_ADDRESS=0x_your_test_address_here
