--- a/contracts/package.json
+++ b/contracts/package.json
@@ -2,6 +2,7 @@
   "name": "@tradeclub/contracts",
   "private": true,
   "version": "0.1.0",
+  "type": "module",
   "scripts": {
     "hardhat:compile": "hardhat compile",
     "hardhat:deploy": "hardhat run scripts/deploy.ts",
@@ -10,14 +11,24 @@
     "forge:test": "forge test"
   },
   "devDependencies": {
-    "@nomicfoundation/hardhat-toolbox": "^4.0.0",
-    "hardhat": "^2.22.0",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.5.4"
+    "@nomicfoundation/hardhat-ethers": "^4.0.4",
+    "@nomicfoundation/hardhat-ignition": "^3.0.7",
+    "@nomicfoundation/hardhat-toolbox-mocha-ethers": "^3.0.2",
+    "@nomicfoundation/hardhat-verify": "^3.0.10",
+    "@types/chai": "^4.3.20",
+    "@types/chai-as-promised": "^8.0.2",
+    "@types/mocha": "^10.0.10",
+    "@types/node": "^22.19.11",
+    "chai": "^5.3.3",
+    "ethers": "^6.16.0",
+    "forge-std": "github:foundry-rs/forge-std#v1.9.4",
+    "hardhat": "^3.1.9",
+    "mocha": "^11.7.5",
+    "typescript": "~5.8.3"
   },
   "dependencies": {
-    "@prb/math": "^3.3.0",
     "@openzeppelin/contracts": "^5.0.2",
+    "@prb/math": "^4.0.0",
     "dotenv": "^16.4.5"
   }
 }
