--- a/backend/package.json
+++ b/backend/package.json
@@ -45,6 +45,7 @@
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.3.0",
     "@nestjs/platform-socket.io": "^11.1.13",
+    "@nestjs/schedule": "^6.1.1",
     "@nestjs/swagger": "^7.2.0",
     "@nestjs/terminus": "^10.2.0",
     "@nestjs/websockets": "^11.1.13",
@@ -54,13 +55,17 @@
     "@solana/web3.js": "^1.98.4",
     "bs58": "^6.0.0",
     "bullmq": "^5.69.3",
+    "cacheable": "^2.3.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "compression": "^1.7.4",
     "dotenv": "^17.2.3",
     "ethers": "^6.16.0",
+    "express": "^4.19.2",
     "helmet": "^7.1.0",
     "ioredis": "^5.4.2",
+    "joi": "^17.12.3",
+    "keyv": "^5.6.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.1",
